- Registered sprite limits are now equal to a character's Charisma in all English pre-made settings to match the entry in the fifth printing of the CRB. German settings are unaffected because it is still Logic-based in the German CRB.
- Fixed some faulty text matches for German books that fetched strings that would span multiple lines, thus sometimes causing the books to not be detected.
- Corrected multiple incorrect or faulty entries in State of the Art ADL content, including some weapons, some vehicles, the Svetoid tradition, the Squirrel mentor spirit, the Cyberdynamix Special HardCore and MCT Dusseldorf commlinks, and the Rheingold Pro Tec Plus Coat and Franzinger Fashion Tenor Coat armors. Existing characters that use these items will usually need to remove and re-add them to see any changes.
- Armor mods for custom liners have now had their categories renamed to be more generic.

Fixes implemented by BM123499

Armor.xml

    Added missing <armor> entry for Parachute.
    Added missing armor_capacity attribute for Pantheon Quick-Charge Battery Pack.

Critterpowers.xml

    Removed legacy SR4‑only power.
    Standardized hyphenation: Low-Light, Wire-band using minus signs.
    Added automotive powers.
    Added “Fold Perception” and “Agonizing Pain” from Howling Shadows (HS).

Critters.xml

    Renamed Baboon → Ozian Baboon (per source text).
    Removed “Wyrd Mantis” (SR4‑only).
    Populated missing <initiative>, <magic>, <resonance>, and <depth> fields for several critters.
    Remove unintended character across the file.
    Applied <rating> to skill and automotive powers; replaced stray <select>.
    Corrected power and quality names:
        Sillence → Silence
        Devour → Devouring
        Substance Extrusion → Secretion/Substance Extrusion
        Shadowing → Sneaking
        Improved Senses → Enhanced Senses
        Spell Resistance → Magic Resistance
        Banishing → Banishing Resistance
        Fae Glamour → Fey Glamour