@@ -3310,8 +3310,8 @@
     <!-- Region Hamburg -->
     <armor>
       <id>4b16a172-b328-4717-b632-39a3d07eeb41</id>
-      <name>FleetHead Kappe</name>
-      <category>Armor</category>
+      <name>FleetHead Sou'wester</name>
+      <category>Clothing</category>
       <armor>0</armor>
       <armorcapacity>3</armorcapacity>
       <avail>4</avail>
@@ -3324,7 +3324,7 @@
     </armor>
     <armor>
       <id>fc1c9de6-4600-4c14-8e8a-9fed51389e4a</id>
-      <name>Rheingold Friesennerz</name>
+      <name>Rheingold Oilskin</name>
       <category>Armor</category>
       <armor>8</armor>
       <armorcapacity>6</armorcapacity>
@@ -3338,7 +3338,7 @@
     </armor>
     <armor>
       <id>e8065f02-68f3-46f6-8cca-298a1806b97b</id>
-      <name>Ares Victory Friesennerz</name>
+      <name>Ares Victory Oilskin</name>
       <category>Armor</category>
       <armor>6</armor>
       <armorcapacity>5</armorcapacity>
