@@ -9643,7 +9643,7 @@
     <!-- Region Hamburg -->
     <vehicle>
       <id>18f41586-7f0f-4ca1-8881-eccdabc3351d</id>
-      <name>MK R/Evolution</name>
+      <name>Messerschmitt-Kawasaki R/Evolution</name>
       <page>174</page>
       <source>HAMG</source>
       <accel>3/2</accel>
@@ -9663,6 +9663,9 @@
           <maxrating>6</maxrating>
         </gear>
       </gears>
+      <mods>
+        <name>Secondary Propulsion (Amphibious, Surface)</name>
+      </mods>
       <seats>1</seats>
     </vehicle>
     <vehicle>
@@ -9765,11 +9768,14 @@
           <maxrating>7</maxrating>
         </gear>
       </gears>
+      <mods>
+        <name rating="2">Life Support</name>
+      </mods>
       <seats>7</seats>
     </vehicle>
     <vehicle>
       <id>94318a48-9f0d-4c9b-ac3e-9e35d31ffb08</id>
-      <name>MK Harbor Sentry</name>
+      <name>Messerschmitt-Kawasaki Harbor Sentry</name>
       <page>176</page>
       <source>HAMG</source>
       <accel>4</accel>
@@ -9783,12 +9789,51 @@
       <sensor>5</sensor>
       <speed>6</speed>
       <gears>
+        <gear rating="5" select="Stoner-Ares M202">[Weapon] Targeting Autosoft</gear>
+        <gear rating="4" select="GE Vindicator Minigun">[Weapon] Targeting Autosoft</gear>
+        <gear>Smartsoft</gear>
+        <gear rating="3">Clearsight Autosoft</gear>
         <gear>
           <name>Sensor Array</name>
           <rating>5</rating>
           <maxrating>7</maxrating>
         </gear>
       </gears>
+      <mods>
+        <name rating="2">Anti-Theft System</name>
+        <name>Standard Drone Rack (Small)</name>
+        <name>Standard Drone Rack (Small)</name>
+        <name rating="2">Passenger Protection System</name>
+        <name>Searchlight</name>
+      </mods>
+      <weaponmounts>
+        <weaponmount>
+          <control>Remote</control>
+          <flexibility>Fixed</flexibility>
+          <size>Heavy</size>
+          <visibility>External</visibility>
+          <mods>
+            <mod>Ammo Bin</mod>
+          </mods>
+        </weaponmount>
+        <weaponmount>
+          <control>Remote</control>
+          <flexibility>Flexible</flexibility>
+          <size>Heavy</size>
+          <visibility>External</visibility>
+          <mods>
+            <mod>Ammo Bin</mod>
+          </mods>
+        </weaponmount>
+      </weaponmounts>
+      <weapons>
+        <weapon>
+          <name>Stoner-Ares M202</name>
+        </weapon>
+        <weapon>
+          <name>GE Vindicator Minigun</name>
+        </weapon>
+      </weapons>
       <seats>6</seats>
     </vehicle>
     <vehicle>
