@@ -145,7 +145,8 @@ Data Changes:
 - Monofilament Whips now properly increase their Accuracy by 2 when they are wirelessly enabled.
 - Registered sprite limits are now equal to a character's Charisma in all English pre-made settings to match the entry in the fifth printing of the CRB. German settings are unaffected because it is still Logic-based in the German CRB.
 - Fixed some faulty text matches for German books that fetched strings that would span multiple lines, thus sometimes causing the books to not be detected.
-- Corrected multiple incorrect or faulty entries in State of the Art ADL content, including some weapons, some vehicles, the Svetoid tradition, the Squirrel mentor spirit, the Cyberdynamix Special HardCore and MCT Dusseldorf commlinks, and the Rheingold Pro Tec Plus Coat and Franzinger Fashion Tenor Coat armors. Existing characters that use these items will usually need to remove and re-add them to see any changes.
+- Corrected multiple incorrect or faulty entries in Datapuls ADL content, including some weapons, some vehicles, the Svetoid tradition, the Squirrel mentor spirit, the Cyberdynamix Special HardCore and MCT Dusseldorf commlinks, and the Rheingold Pro Tec Plus Coat and Franzinger Fashion Tenor Coat armors. Existing characters that use these items will usually need to remove and re-add them to see any changes.
+- Corrected mistranslations and bad weapon and vehicle entries for Datapuls Hamburg content. Existing characters that use these items will usually need to remove and re-add them to see any changes.
 - Armor mods for custom liners have now had their categories renamed to be more generic.
 
 Fixes implemented by BM123499
